--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ plugins:
   - include-markdown
 nav:
     - 'About': README.md
+    - 'Compile xrootd': Compile.md
     - '3rd Party Copy': tpc/README.md
     - 'Erasure Encoding': ec/README.md
 theme: 
