Update left panel

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ plugins:
 nav:
     - 'About': README.md
     - 'Compile Xrootd on CentOS': Compile.md
-    - '3rd Party Copy for Posix, Xrootd and S3 Storage': tpc/README.md
+    - '3rd Party Copy for Posix & Object Store': tpc/README.md
     - 'Erasure Coding': ec/README.md
 theme: 
   name: readthedocs
