add build section to .readthedocs.yaml

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,12 @@
 version: 2
 
+build:
+  os: rockylinux:9
+  tools:
+    python: "3.9"
+
 python:
-   version: 3.8
+   version: 3.9
    install:
    - requirements: requirements.txt
 
