--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - '3rd Party Copy for Posix & Object Store': tpc/README.md
     - 'Erasure Coding': ec/README.md
     - 'Tape Endpoint Demo' : preplib4tape/README.md
+    - 'Summary Monitoring Dashboard' : SummaryMonDashboard/README.md
 theme: 
   name: readthedocs
   plugins: 
