update moniting example from summary only to also include TPC g-stream

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
     - '3rd Party Copy for Posix & Object Store': tpc/README.md
     - 'Erasure Coding': ec/README.md
     - 'Tape Endpoint Demo' : preplib4tape/README.md
-    - 'Summary Monitoring Dashboard' : SummaryMonDashboard/README.md
+    - 'Network IO Monitoring Dashboard' : NetIOmon/README.md
 theme: 
   name: readthedocs
   plugins: 
